iniciando projeto de Eventos

--- a/aula2/app_exemplo/views/exemplos/app.ejs
+++ b/aula2/app_exemplo/views/exemplos/app.ejs
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Conteúdo de uma página EJS</h1>
+    <h2>Conteúdo de uma página EJS</h2>
+    <h3>Conteúdo de uma página EJS</h3>
     <p>
         Aqui pode ser incluído conteúdo CSS e JS
     </p>
