inicio do web service

--- a/ProjetoEventos/Nodejs/nodeEventos/views/eventos/menu.ejs
+++ b/ProjetoEventos/Nodejs/nodeEventos/views/eventos/menu.ejs
@@ -26,6 +26,9 @@
             <li>
                 <a href="/listaEventos">Lista de Eventos</a>
             </li>
+            <li>
+                <a href="/listaEventosWS">Lista de Eventos (WebService)</a>
+            </li>
         </ul>
     </section>
     <section>
