--- a/ProjetoEventos/Nodejs/nodeEventos/views/eventos/menu.ejs
+++ b/ProjetoEventos/Nodejs/nodeEventos/views/eventos/menu.ejs
@@ -29,6 +29,9 @@
             <li>
                 <a href="/listaEventosWS">Lista de Eventos (WebService)</a>
             </li>
+            <li>
+                <a href="/listaPagamentosWS">Lista de Pagamentos (WebService)</a>
+            </li>
         </ul>
     </section>
     <section>
