--- a/ProjetoEventos/Nodejs/nodeEventos/views/eventos/listaEventosWS.ejs
+++ b/ProjetoEventos/Nodejs/nodeEventos/views/eventos/listaEventosWS.ejs
@@ -15,7 +15,7 @@
     </header>
     <section>
         <!--será implementado em breve-->
-        <table>
+        <table border="1">
             <thead>
                 <tr>
                     <th>Descrição</th>
