--- a/ProjetoEventos/Mean_AngularJS/appAngularJS/views/eventos/index.ejs
+++ b/ProjetoEventos/Mean_AngularJS/appAngularJS/views/eventos/index.ejs
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Cadastro e Consulta de Eventos</h1>
-    
+    <script src="javascripts/angular.min.js"></script>
 </body>
 
 </html>
