--- a/ProjetoEventos/Mean_Angular/appAngular/src/app/eventos/eventos.component.html
+++ b/ProjetoEventos/Mean_Angular/appAngular/src/app/eventos/eventos.component.html
@@ -1,1 +1,20 @@
-<p>eventos works!</p>
+<h1>Lista de eventos!</h1>
+
+<table>
+    <tr>
+        <th>descricao</th>
+        <th>valor</th>
+    </tr>
+    <tr>
+        <td>descricao 1</td>
+        <td>valor1</td>
+    </tr>
+    <tr>
+        <td>descricao 2</td>
+        <td>valor2</td>
+    </tr>
+    <tr>
+        <td>descricao 3</td>
+        <td>valor3</td>
+    </tr>
+</table>
