--- a/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.html
+++ b/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.html
@@ -14,6 +14,7 @@
     <li>componente3</li>
 
   </ul>
+  <app-eventos></app-eventos>
   <router-outlet></router-outlet>
   
   <svg id="clouds" alt="Gray Clouds Background" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677" viewBox="0 0 2611.084 485.677">
