--- a/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.html
+++ b/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.html
@@ -9,11 +9,16 @@
 
 <div class="content" role="main">
   <ul>
-    <li>Componente1</li>
-    <li>Componente2</li>
-    <li>Componente3</li>
+    <li>
+      <a href="#home">Home</a> 
+    </li>
+    <li>
+      <a href="#eventos">Eventos</a> 
+    </li>
+    <li>
+      <a href="#pagamentos">Pagamentos</a> 
+    </li>
   </ul>
-  <app-eventos></app-eventos>
 
   <router-outlet></router-outlet>
 
