--- a/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.css
+++ b/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.css
@@ -249,3 +249,46 @@ svg#clouds {
     visibility: hidden;
   }
 }
+ul {
+  display: flex;
+  position: relative;
+  width: 350px;
+  margin-left: auto;
+}
+ul li {
+  position: relative;
+  list-style: none;
+  width: 100px;
+  height: 20px;
+  z-index: 1;
+  justify-content: center;
+}
+ul li a.active .icon {
+  transform: translateY(14px) scale(200%);
+}
+ul li a.active .text {
+  transform: translateY(20px);
+  background-color: #1976d2;
+  border-radius: 0 0 10px 10px;
+  padding: 8px;
+  opacity: 1;
+  box-shadow: 1px 2px 1px 0px rgba(0, 0, 0, 0.75);
+}
+ul li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  font-weight: 500;
+  color: white;
+}
+ul li a .icon {
+  transform: translateY(0px);
+  transition: 0.5s;
+}
+ul li a .text {
+  transform: translateY(0px);
+  opacity: 1;
+  transition: 0.5s;
+}
