--- a/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.less
+++ b/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.less
@@ -302,47 +302,43 @@
 
     li{
       position: relative;
-            list-style: none;
-            width: 100px;
-            height: 20px;
-            z-index: 1;
-            justify-content: center;
+      list-style: none;
+      width: 100px;
+      height: 20px;
+      justify-content: center;
 
-            a.active {
-              .icon{
-                transform: translateY(14px) scale(200%);
-              }
+      a{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        font-weight: 500;
+        color: white;
 
-              .text{
-                  transform: translateY(20px);
-                  background-color: #1976d2;
-                  border-radius: 0 0 10px 10px;
-                  padding: 8px;
-                  opacity: 1;
-                  box-shadow: 1px 2px 1px 0px rgb(0 0 0 / 75%);
-              }
+        .icon{
+          transform: translateY(0px);
+          transition: 0.5s;
+        }
+
+        .text{
+            transform: translateY(0px);
+            transition: 0.5s;
+        }
+
+        &.active {
+          .icon{
+            transform: translateY(14px) scale(200%);
           }
-
-            a{
-              display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                text-align: center;
-                font-weight: 500;
-                color: white;
-
-                .icon{
-                  transform: translateY(0px);
-                  transition: 0.5s;
-                }
-
-                .text{
-                    transform: translateY(0px);
-                    opacity: 1;
-                    transition: 0.5s;
-                }
-                
-            }
+  
+          .text{
+              transform: translateY(20px);
+              background-color: #1976d2;
+              border-radius: 0 0 10px 10px;
+              padding: 8px;
+              box-shadow: 1px 2px 1px 0px rgb(0 0 0 / 75%);
+          }
+        }
+      }
     }
   }
