--- a/ProjetoEventos/Mean_Angular/appAngular/src/app/eventos/eventos.component.html
+++ b/ProjetoEventos/Mean_Angular/appAngular/src/app/eventos/eventos.component.html
@@ -2,16 +2,38 @@
 <table>
     <thead>
         <tr>
-            <th>Descricao</th>
-            <th>Valor</th>
+            <th>Descrição</th>
+            <th>Preço</th>
+            <th>Data</th>
+            <th>Ações</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let evento of eventos">
             <td>{{evento.descricao}}</td>
-            <td>{{evento.preco}}</td>
+            <td>{{evento.preco | currency}}</td>
+            <td>{{evento.data | date:'dd/MM/yyyy'}}</td>
+            <td>
+                <button (click)="preencherFormulario(evento)">editar</button>  
+                | 
+                <button (click)="delete(evento._id)">excluir</button>  
+            </td>
         </tr>
 
     </tbody>
     
 </table>
+
+<br>
+
+<form>
+    <label>Descrição</label>
+    <input type="text" name="descricao" [(ngModel)]="evento.descricao">
+    <label>Preço</label>
+    <input type="text" name="preco" [(ngModel)]="evento.preco">
+    <label>Data</label>
+    <input type="date" name="data" [(ngModel)]="evento.data" (ngModelChange)="evento.data = $event">
+    <button (click)="salvar()">salvar</button>
+</form>
+
+{{evento | json}}
