--- a/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.css
+++ b/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.css
@@ -249,3 +249,43 @@ svg#clouds {
     visibility: hidden;
   }
 }
+ul {
+  display: flex;
+  position: relative;
+  width: 350px;
+  margin-left: auto;
+}
+ul li {
+  position: relative;
+  list-style: none;
+  width: 100px;
+  height: 20px;
+  justify-content: center;
+}
+ul li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  font-weight: 500;
+  color: white;
+}
+ul li a .icon {
+  transform: translateY(-12px);
+  transition: 0.3s;
+}
+ul li a .text {
+  transform: translateY(-12px);
+  transition: 0.3s;
+}
+ul li a.active .icon {
+  transform: translateY(4px) scale(200%) rotate(360deg);
+}
+ul li a.active .text {
+  transform: translateY(8px);
+  background-color: #1976d2;
+  border-radius: 0 0 10px 10px;
+  padding: 8px;
+  box-shadow: 1px 2px 1px 0px rgba(136, 136, 136, 0.75);
+}
