--- a/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.less
+++ b/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.less
@@ -293,3 +293,51 @@
       visibility: hidden;
     }
   }
+  ul{
+    display: flex;
+    position: relative;
+    width: 350px;
+    margin-left: auto;
+
+    li{
+      position: relative;
+      list-style: none;
+      width: 100px;
+      height: 20px;
+      justify-content: center;
+
+      a{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        font-weight: 500;
+        color: white;
+
+        .icon{
+          transform: translateY(-12px);
+          transition: 0.3s;
+        }
+
+        .text{
+            transform: translateY(-12px);
+            transition: 0.3s;
+        }
+
+        &.active {
+          .icon{
+            transform: translateY(4px) scale(200%) rotate(360deg);
+          }
+  
+          .text{
+              transform: translateY(8px);
+              background-color: #1976d2;
+              border-radius: 0 0 10px 10px;
+              padding: 8px;
+              box-shadow: 1px 2px 1px 0px rgba(136, 136, 136, 0.75);
+          }
+        }
+      }
+    }
+  }
